# conceptual_virus_dashboard

./: .env  pyproject.toml  update.py
app/: main.py  pyproject.toml
app/api/requests/: status_update.py  virus.py
app/api/responses/: response.py
app/api/responses/dashboard/: __init__.py  creature.py  creature_summary.py  creatures.py
app/api/routes/api/: __init__.py  creatures.py  dashboard.py
app/bootstrap/: create_app.py
app/cmd/: __init__.py  update_virus.py
app/config/: __init__.py
app/database/: __init__.py
app/http/requests/: __init__.py  status_update.py
app/http/routes/api/: creatures.py
app/models/: __init__.py  creature.py  snapshot.py  virus.py
app/routes/api/: creatures.py  dashboard.py
app/services/: __init__.py  creature_service.py
migrations/: env.py
migrations/versions/: 2a3c7799d590_create_creatures_table.py  2ef8a5ea8171_create_viruses_table.py  d86568081a85_create_snapshots_table.py
public/: index.html
public/static/css/: 2.afded86d.chunk.css  2.afded86d.chunk.css.map  main.d1d1bd43.chunk.css  main.d1d1bd43.chunk.css.map
public/static/js/: 2.21d62258.chunk.js  2.21d62258.chunk.js.map  2.f5d8913b.chunk.js  2.f5d8913b.chunk.js.LICENSE.txt  2.f5d8913b.chunk.js.map  3.4cea2020.chunk.js  3.4cea2020.chunk.js.map  3.e0251f89.chunk.js  3.e0251f89.chunk.js.map  main.106ccff9.chunk.js  main.106ccff9.chunk.js.map  main.86250c9c.chunk.js  main.86250c9c.chunk.js.map  main.cb165d28.chunk.js  main.cb165d28.chunk.js.map  runtime-main.5f8453fe.js  runtime-main.5f8453fe.js.map  runtime-main.f9b6d6cc.js  runtime-main.f9b6d6cc.js.map
