[tool.poetry]
name = "conceptual_virus_dashboard"
version = "0.1.0"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.26"
pydantic = "^1.8.2"
alembic = "^1.7.4"
psycopg2 = "^2.9.1"
fastapi = "^0.70.0"
python-dotenv = "^0.19.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
yapf = "^0.31.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
